doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-sourcepath
C:\Users\albertkwok\Documents\PGame
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\albertkwok\Documents\PGame
-d
C:\Users\albertkwok\Documents\PGame\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
PGame
-windowtitle
PGame
-author
-version
-nodeprecated
-package
-Xdoclint:none
-link
http://download.oracle.com/javase/8/docs/api/
Sprites
Animation
Physics
<---- end of javadoc command ---->
Loading source files for package Sprites...
Loading source files for package Animation...
Loading source files for package Physics...
Constructing Javadoc information...
C:\Users\albertkwok\Documents\PGame\Sprites\Entity.java:3: error: package PGame.Physics does not exist
import PGame.Physics.PhysicsEngine;
                    ^
Standard Doclet version 1.8.0_131
Building tree for all the packages and classes...
Generating C:\Users\albertkwok\Documents\PGame\doc\Sprites\Entity.html...
C:\Users\albertkwok\Documents\PGame\Sprites\Entity.java:39: warning - @param argument "Hp" is not a parameter name.
Generating C:\Users\albertkwok\Documents\PGame\doc\Sprites\PObject.html...
C:\Users\albertkwok\Documents\PGame\Sprites\PObject.java:29: warning - @param tag has no arguments.
C:\Users\albertkwok\Documents\PGame\Sprites\PObject.java:29: warning - @param argument "" is not a parameter name.
Generating C:\Users\albertkwok\Documents\PGame\doc\Sprites\Sprite.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Animation\Background.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Animation\GamePanel.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Animation\Window.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Physics\PhysicsEngine.html...
C:\Users\albertkwok\Documents\PGame\Physics\PhysicsEngine.java:105: warning - @param argument "the" is not a parameter name.
C:\Users\albertkwok\Documents\PGame\Physics\PhysicsEngine.java:105: warning - @param argument "the" is not a parameter name.
Generating C:\Users\albertkwok\Documents\PGame\doc\overview-frame.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Animation\package-frame.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Animation\package-summary.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Animation\package-tree.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Physics\package-frame.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Physics\package-summary.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Physics\package-tree.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Sprites\package-frame.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Sprites\package-summary.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\Sprites\package-tree.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\constant-values.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\serialized-form.html...
Building index for all the packages and classes...
Generating C:\Users\albertkwok\Documents\PGame\doc\overview-tree.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\index-all.html...
Building index for all classes...
Generating C:\Users\albertkwok\Documents\PGame\doc\allclasses-frame.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\allclasses-noframe.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\index.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\overview-summary.html...
Generating C:\Users\albertkwok\Documents\PGame\doc\help-doc.html...
6 warnings
